# server-fns

./: Cargo.toml  rustfmt.toml
core/: Cargo.toml
core/src/: axum_router.rs  build.rs  embed_asset.rs  http.rs  lib.rs  macro_traits.rs  middleware.rs  out.rs  parse.rs  router.rs  server_fn.rs  server_router.rs  server_state.rs  transform.rs
examples/: server_fns.rs
examples/auth-middleware/: Cargo.toml
examples/extra-routes/: Cargo.toml
examples/prototype-server/: Cargo.toml
examples/prototype-server/extra-routes/: Cargo.toml
examples/prototype-server/server-state/: Cargo.toml
examples/prototype-server/server-state/src/: lib.rs
examples/prototype-server/src/: main.rs
examples/server-state/: Cargo.toml
examples/server-state/src/: lib.rs
main/: Cargo.toml
procm/: Cargo.toml
procm/src/: lib.rs
src/: lib.rs
