[workspace]
members = [
    "core",
    "examples/auth-middleware",
    "examples/extra-routes",
    "examples/prototype-server",
    "examples/server-state",
    "main",
    "procm",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
axum              = { version = "0.7", default-features = false }
bytes             = "1.7.1"
convert_case      = "0.6.0"
deluxe            = "0.5.0"
derive-syn-parse  = "0.2.0"
gloo-net          = { version = "0.6.0" }
inventory         = "0.3.15"
itertools         = "0.13.0"
paste             = "1.0.15"
proc-macro2       = "1.0.85"
quote             = "1.0.36"
seq-macro         = "0.3.5"
server-fns        = { version = "0.1.0", path = "main" }
server-fns-core   = { version = "0.1.0", path = "core" }
server-fns-procm  = { version = "0.1.0", path = "procm" }
static_assertions = "1.1.0"
syn               = "2.0.66"
thiserror         = "1.0.63"
tokio             = "1.44"
tower             = "0.5.0"
tower-layer       = "0.3.3"
trait-variant     = "0.1.2"

[workspace.dependencies.mime_guess]
default-features = false
version          = "2.0.5"
