[package]
name = "server-fns-core"

edition.workspace = true
version.workspace = true

[dependencies]
axum             = { workspace = true }
convert_case     = { workspace = true }
deluxe           = { workspace = true }
derive-syn-parse = { workspace = true }
inventory        = { workspace = true }
itertools        = { workspace = true }
paste            = { workspace = true }
proc-macro2      = { workspace = true }
quote            = { workspace = true }
syn              = { workspace = true, features = ["derive", "extra-traits", "full", "parsing", "printing"] }

[dev-dependencies]
seq-macro = { workspace = true }
