[package]
name = "server-fns-core"

edition.workspace = true
version.workspace = true

[features]
server = ["dep:axum", "dep:tokio"]

[dependencies]
bytes.workspace            = true
convert_case.workspace     = true
deluxe.workspace           = true
derive-syn-parse.workspace = true
inventory.workspace        = true
itertools.workspace        = true
mime_guess.workspace       = true
paste.workspace            = true
proc-macro2.workspace      = true
quote.workspace            = true
thiserror.workspace        = true
trait-variant.workspace    = true

syn = { workspace = true, features = [
    "derive",
    "extra-traits",
    "full",
    "parsing",
    "printing",
] }

[dependencies.axum]
optional  = true
workspace = true

[dependencies.tokio]
features  = ["fs", "rt-multi-thread"]
optional  = true
workspace = true

[dev-dependencies]
seq-macro = { workspace = true }
