[package]
name = "prototype-server"

edition.workspace = true
version.workspace = true

[features]
default = ["server"]
server  = ["server-fns/server", "server-state/server"]
web     = ["server-fns/web", "server-state/web"]

[dependencies]
axum         = { workspace = true, features = ["http1", "http2", "json", "tokio"] }
extra-routes = { path = "../extra-routes" }
server-fns   = { workspace = true }
server-state = { path = "../server-state" }
tokio        = { workspace = true, features = ["full"] }
tower        = { workspace = true }
